--- a/package.json
+++ b/package.json
@@ -18,17 +18,28 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "deploy": "node ./cfn/deploy",
+    "openapi": "ts-node src/main --openapi-generate"
   },
   "dependencies": {
-    "@nestjs/common": "^7.0.0",
-    "@nestjs/core": "^7.0.0",
-    "@nestjs/platform-express": "^7.0.0",
+    "@aws-serverless-tools/nest": "^1.0.0",
+    "@nestjs/common": "^7.4.2",
+    "@nestjs/config": "^0.5.0",
+    "@nestjs/core": "^7.4.2",
+    "@nestjs/platform-express": "^7.4.2",
+    "@nestjs/swagger": "^4.5.12",
+    "aws-lambda": "^1.0.6",
+    "aws-serverless-express": "^3.3.8",
+    "class-validator": "^0.12.2",
+    "nest-qldb": "^1.0.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.5.4"
+    "rxjs": "^6.5.4",
+    "swagger-ui-express": "^4.1.4"
   },
   "devDependencies": {
+    "@aws-serverless-tools/cli": "^1.0.0",
     "@nestjs/cli": "^7.0.0",
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
@@ -63,5 +74,15 @@
     },
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
+  },
+  "openApi": {
+    "filePath": "./cfn/openapi.yaml",
+    "clientOutputFolderPath": "./angular-client/",
+    "clientAdditionalProperties": "apiModulePrefix=FailsaveApi,fileNaming=kebab-case,stringEnums=true,taggedUnions=true"
+  },
+  "cfnLambdaParamsConfig": {
+    "cfnFilePath": "./cfn/cloudformation.yaml",
+    "lambdaResourceName": "FailsaveApiLambda",
+    "parametersFilePath": "./cfn/parameters-dev.json"
   }
 }
