--- a/cfn/cloudformation.yaml
+++ b/cfn/cloudformation.yaml
@@ -105,8 +105,7 @@ Resources:
       Action: lambda:InvokeFunction
       FunctionName: !Ref FailsaveApiLambda
       Principal: apigateway.amazonaws.com
-      SourceArn: !Sub "arn:aws:execute-api:${AWS::Region}:${AWS::AccountId}:${FailsaveApiApi}/*/*/*"
-
+      SourceArn: !Sub "arn:aws:execute-api:${AWS::Region}:${AWS::AccountId}:${FailsaveApiApi}/*"
   FailsaveLedger:
     Type: AWS::QLDB::Ledger
     Properties: 
